add eth registers to machine config

--- a/generation/machines/wrt350n_v2.yaml
+++ b/generation/machines/wrt350n_v2.yaml
@@ -374,106 +374,311 @@ machine:
       u2c_mmio_base: "0xf1050000"
       u2c_mmio_size: "0x500"
       u2c_registers:
-      - name: "port0_usb_2_0_id"
-        offset: "0x00"
-      - name: "port0_usb_2_0_hwgeneral"
-        offset: "0x04"
-      - name: "port0_usb_2_0_hwhost"
-        offset: "0x08"
-      - name: "port0_usb_2_0_hwdevice"
-        offset: "0x0c"
-      - name: "port0_usb_2_0_hwtxbuf"
-        offset: "0x10"
-      - name: "port0_usb_2_0_hwrxbuf"
-        offset: "0x14"
-      - name: "port0_usb_2_0_hwtttxbuf"
-        offset: "0x18"
-      - name: "port0_usb_2_0_hwttrxbuf"
-        offset: "0x1c"
-      - name: "port0_usb_2_0_caplength"
-        offset: "0x100"
-      - name: "port0_usb_2_0_hciversion"
-        offset: "0x102"
-      - name: "port0_usb_2_0_hcsparams"
-        offset: "0x104"
-      - name: "port0_usb_2_0_hccparams"
-        offset: "0x108"
-      - name: "port0_usb_2_0_dciversion"
-        offset: "0x120"
-      - name: "port0_usb_2_0_dccparams"
-        offset: "0x124"
-      - name: "port0_usb_2_0_usbcmd"
-        offset: "0x140"
-      - name: "port0_usb_2_0_usbsts"
-        offset: "0x144"
-      - name: "port0_usb_2_0_usbintr"
-        offset: "0x148"
-      - name: "port0_usb_2_0_frindex"
-        offset: "0x14c"
-      - name: "port0_usb_2_0_periodiclistbase__or__device_addr"
-        offset: "0x154"
-      - name: "port0_usb_2_0_asynclistaddr__or__endpointlist_addr"
-        offset: "0x158"
-      - name: "port0_usb_2_0_ttctrl"
-        offset: "0x15c"
-      - name: "port0_usb_2_0_burstsize"
-        offset: "0x160"
-      - name: "port0_usb_2_0_txfilltuning"
-        offset: "0x164"
-      - name: "port0_usb_2_0_txttfilltuning"
-        offset: "0x168"
-      - name: "port0_usb_2_0_configflag"
-        offset: "0x180"
-      - name: "port0_usb_2_0_portsc1"
-        offset: "0x184"
-      - name: "port0_usb_2_0_otgsc"
-        offset: "0x1a4"
-      - name: "port0_usb_2_0_usbmode"
-        offset: "0x1a8"
-      - name: "port0_usb_2_0_enpdtsetupstat"
-        offset: "0x1ac"
-      - name: "port0_usb_2_0_endptprime"
-        offset: "0x1b0"
-      - name: "port0_usb_2_0_endptflush"
-        offset: "0x1b4"
-      - name: "port0_usb_2_0_endptstatus"
-        offset: "0x1b8"
-      - name: "port0_usb_2_0_endptcomplete"
-        offset: "0x1bc"
-      - name: "port0_usb_2_0_endptctrl0"
-        offset: "0x1c0"
-      - name: "port0_usb_2_0_endptctrl1"
-        offset: "0x1c4"
-      - name: "port0_usb_2_0_endptctrl2"
-        offset: "0x1c8"
-      - name: "port0_usb_2_0_endptctrl3"
-        offset: "0x1cc"
-      - name: "port0_usb_2_0_bridge_control_register"
-        offset: "0x300"
-      - name: "port0_usb_2_0_bridge_interrupt_cause_register"
-        offset: "0x310"
-      - name: "port0_usb_2_0_bridge_interrupt_mask_register"
-        offset: "0x314"
-      - name: "port0_usb_2_0_bridge_error_address_register"
-        offset: "0x31c"
-      - name: "port0_usb_2_0_window0_control_register"
-        offset: "0x320"
-      - name: "port0_usb_2_0_window0_base_register"
-        offset: "0x324"
-      - name: "port0_usb_2_0_window1_control_register"
-        offset: "0x330"
-      - name: "port0_usb_2_0_window1_base_register"
-        offset: "0x334"
-      - name: "port0_usb_2_0_window2_control_register"
-        offset: "0x340"
-      - name: "port0_usb_2_0_window2_base_register"
-        offset: "0x344"
-      - name: "port0_usb_2_0_window3_control_register"
-        offset: "0x350"
-      - name: "port0_usb_2_0_window3_base_register"
-        offset: "0x354"
-      - name: "port0_usb_2_0_power_control_register"
-        offset: "0x400"
+        - name: "port0_usb_2_0_id"
+          offset: "0x00"
+        - name: "port0_usb_2_0_hwgeneral"
+          offset: "0x04"
+        - name: "port0_usb_2_0_hwhost"
+          offset: "0x08"
+        - name: "port0_usb_2_0_hwdevice"
+          offset: "0x0c"
+        - name: "port0_usb_2_0_hwtxbuf"
+          offset: "0x10"
+        - name: "port0_usb_2_0_hwrxbuf"
+          offset: "0x14"
+        - name: "port0_usb_2_0_hwtttxbuf"
+          offset: "0x18"
+        - name: "port0_usb_2_0_hwttrxbuf"
+          offset: "0x1c"
+        - name: "port0_usb_2_0_caplength"
+          offset: "0x100"
+        - name: "port0_usb_2_0_hciversion"
+          offset: "0x102"
+        - name: "port0_usb_2_0_hcsparams"
+          offset: "0x104"
+        - name: "port0_usb_2_0_hccparams"
+          offset: "0x108"
+        - name: "port0_usb_2_0_dciversion"
+          offset: "0x120"
+        - name: "port0_usb_2_0_dccparams"
+          offset: "0x124"
+        - name: "port0_usb_2_0_usbcmd"
+          offset: "0x140"
+        - name: "port0_usb_2_0_usbsts"
+          offset: "0x144"
+        - name: "port0_usb_2_0_usbintr"
+          offset: "0x148"
+        - name: "port0_usb_2_0_frindex"
+          offset: "0x14c"
+        - name: "port0_usb_2_0_periodiclistbase__or__device_addr"
+          offset: "0x154"
+        - name: "port0_usb_2_0_asynclistaddr__or__endpointlist_addr"
+          offset: "0x158"
+        - name: "port0_usb_2_0_ttctrl"
+          offset: "0x15c"
+        - name: "port0_usb_2_0_burstsize"
+          offset: "0x160"
+        - name: "port0_usb_2_0_txfilltuning"
+          offset: "0x164"
+        - name: "port0_usb_2_0_txttfilltuning"
+          offset: "0x168"
+        - name: "port0_usb_2_0_configflag"
+          offset: "0x180"
+        - name: "port0_usb_2_0_portsc1"
+          offset: "0x184"
+        - name: "port0_usb_2_0_otgsc"
+          offset: "0x1a4"
+        - name: "port0_usb_2_0_usbmode"
+          offset: "0x1a8"
+        - name: "port0_usb_2_0_enpdtsetupstat"
+          offset: "0x1ac"
+        - name: "port0_usb_2_0_endptprime"
+          offset: "0x1b0"
+        - name: "port0_usb_2_0_endptflush"
+          offset: "0x1b4"
+        - name: "port0_usb_2_0_endptstatus"
+          offset: "0x1b8"
+        - name: "port0_usb_2_0_endptcomplete"
+          offset: "0x1bc"
+        - name: "port0_usb_2_0_endptctrl0"
+          offset: "0x1c0"
+        - name: "port0_usb_2_0_endptctrl1"
+          offset: "0x1c4"
+        - name: "port0_usb_2_0_endptctrl2"
+          offset: "0x1c8"
+        - name: "port0_usb_2_0_endptctrl3"
+          offset: "0x1cc"
+        - name: "port0_usb_2_0_bridge_control_register"
+          offset: "0x300"
+        - name: "port0_usb_2_0_bridge_interrupt_cause_register"
+          offset: "0x310"
+        - name: "port0_usb_2_0_bridge_interrupt_mask_register"
+          offset: "0x314"
+        - name: "port0_usb_2_0_bridge_error_address_register"
+          offset: "0x31c"
+        - name: "port0_usb_2_0_window0_control_register"
+          offset: "0x320"
+        - name: "port0_usb_2_0_window0_base_register"
+          offset: "0x324"
+        - name: "port0_usb_2_0_window1_control_register"
+          offset: "0x330"
+        - name: "port0_usb_2_0_window1_base_register"
+          offset: "0x334"
+        - name: "port0_usb_2_0_window2_control_register"
+          offset: "0x340"
+        - name: "port0_usb_2_0_window2_base_register"
+          offset: "0x344"
+        - name: "port0_usb_2_0_window3_control_register"
+          offset: "0x350"
+        - name: "port0_usb_2_0_window3_base_register"
+          offset: "0x354"
+        - name: "port0_usb_2_0_power_control_register"
+          offset: "0x400"
+    eth_controller:
+      eth_name: "gigabit_ethernet_controller"
+      eth_mmio_base: "0xf107200"
+      eth_mmio_size: "0x2000"
+      eth_registers:
+        - name: "phy_address"
+          offset: "0x000"
+        - name: "smi"
+          offset: "0x004"
+        - name: "ethernet_unit_default_address_euda"
+          offset: "0x008"
+        - name: "ethernet_unit_default_id_eudid"
+          offset: "0x00c"
+        - name: "ethernet_unit_reserved_eu"
+          offset: "0x014"
+        - name: "ethernet_unit_interrupt_cause_euic"
+          offset: "0x080"
+        - name: "ethernet_unit_interrupt_mask_euim"
+          offset: "0x084"
+        - name: "ethernet_unit_error_address_euea"
+          offset: "0x094"
+        - name: "ethernet_unit_internal_address_error_euiae"
+          offset: "0x098"
+        - name: "ethernet_unit_port_pads_calibration_eupcr"
+          offset: "0x0a0"
+        - name: "ethernet_unit_control_euc"
+          offset: "0x0b0"
+        - name: "base_address_0_ba0"
+          offset: "0x200"
+        - name: "size_s_0_sr0"
+          offset: "0x204"
+        - name: "base_address_1_ba1"
+          offset: "0x208"
+        - name: "size_s_1_sr1"
+          offset: "0x20c"
+        - name: "base_address_2_ba2"
+          offset: "0x210"
+        - name: "size_s_2_sr2"
+          offset: "0x214"
+        - name: "base_address_3_ba3"
+          offset: "0x218"
+        - name: "size_s_3_sr3"
+          offset: "0x21c"
+        - name: "base_address_4_ba4"
+          offset: "0x220"
+        - name: "size_s_4_sr4"
+          offset: "0x224"
+        - name: "base_address_5_ba5"
+          offset: "0x228"
+        - name: "size_s_5_sr5"
+          offset: "0x22c"
+        - name: "high_address_remap_ha_harr0"
+          offset: "0x280"
+        - name: "high_address_remap_ha_harr1"
+          offset: "0x284"
+        - name: "high_address_remap_ha_harr2"
+          offset: "0x288"
+        - name: "high_address_remap_ha_harr3"
+          offset: "0x28c"
+        - name: "base_address_enable_bare"
+          offset: "0x290"
+        - name: "ethernet_port_access_protect_epap"
+          offset: "0x294"
+        - name: "port_configuration_gec"
+          offset: "0x400"
+        - name: "port_configuration_extend_gecx"
+          offset: "0x404"
+        - name: "mii_serial_parameters"
+          offset: "0x408"
+        - name: "gmii_serial_parameters"
+          offset: "0x40c"
+        - name: "vlan_ethertype_evlane"
+          offset: "0x410"
+        - name: "mac_address_low_macal"
+          offset: "0x414"
+        - name: "mac_address_high_macah"
+          offset: "0x418"
+        - name: "sdma_configuration_sdc"
+          offset: "0x41c"
+        - name: "ip_differentiated_services_codepoint_0_to_priority_dscp0"
+          offset: "0x420"
+        - name: "ip_differentiated_services_codepoint_1_to_priority_dscp1"
+          offset: "0x424"
+        - name: "ip_differentiated_services_codepoint_2_to_priority_dscp2"
+          offset: "0x428"
+        - name: "ip_differentiated_services_codepoint_23?_to_priority_dscp3"
+          offset: "0x42c"
+        - name: "ip_differentiated_services_codepoint_24?_to_priority_dscp4"
+          offset: "0x430"
+        - name: "ip_differentiated_services_codepoint_25?_to_priority_dscp5"
+          offset: "0x434"
+        - name: "ip_differentiated_services_codepoint_6_to_priority_dscp6"
+          offset: "0x438"
+        - name: "port_serial_control_psc"
+          offset: "0x43c"
+        - name: "vlan_priority_tag_to_priority_vpt2p"
+          offset: "0x440"
+        - name: "ethernet_port_status_ps"
+          offset: "0x444"
+        - name: "transmit_queue_command_tqc"
+          offset: "0x448"
+        - name: "maximum_transmit_unit_mtu"
+          offset: "0x458"
+        - name: "port_interrupt_cause_ic"
+          offset: "0x460"
+        - name: "port_interrupt_cause_extend_ice"
+          offset: "0x464"
+        - name: "port_interrupt_mask_pim"
+          offset: "0x468"
+        - name: "port_extend_interrupt_mask_peim"
+          offset: "0x46c"
+        - name: "port_rx_fifo_urgent_threshold_prfut"
+          offset: "0x470"
+        - name: "port_tx_fifo_urgent_threshold_ptfut"
+          offset: "0x474"
+        - name: "port_rx_minimal_frame_size_pmfs"
+          offset: "0x47c"
+        - name: "port_rx_discard_frame_counter_gedfc"
+          offset: "0x484"
+        - name: "port_overrun_frame_counter_pofc"
+          offset: "0x488"
+        - name: "port_internal_address_error_euiae"
+          offset: "0x494"
+        - name: "ethernet_current_receive_descriptor_pointers_crdp_q0"
+          offset: "0x60c"
+        - name: "ethernet_current_receive_descriptor_pointers_crdp_q1"
+          offset: "0x61c"
+        - name: "ethernet_current_receive_descriptor_pointers_crdp_q2"
+          offset: "0x62c"
+        - name: "ethernet_current_receive_descriptor_pointers_crdp_q3"
+          offset: "0x63c"
+        - name: "ethernet_current_receive_descriptor_pointers_crdp_q4"
+          offset: "0x64c"
+        - name: "ethernet_current_receive_descriptor_pointers_crdp_q5"
+          offset: "0x65c"
+        - name: "ethernet_current_receive_descriptor_pointers_crdp_q6"
+          offset: "0x66c"
+        - name: "ethernet_current_receive_descriptor_pointers_crdp_q7"
+          offset: "0x67c"
+        - name: "receive_queue_command_rqc"
+          offset: "0x680"
+        - name: "transmit_current_served_descriptor_pointer"
+          offset: "0x684"
+        - name: "transmit_current_queue_descriptor_pointer_tcqdp_q0"
+          offset: "0x6c0"
+        - name: "transmit_queue_token-bucket_counter_tqxtbc_q0"
+          offset: "0x700"
+        - name: "transmit_queue_token_bucket_configuration_tqxtbc_q0"
+          offset: "0x704"
+        - name: "transmit_queue_arbiter_configuration_tqxac_q0"
+          offset: "0x708"
+        - name: "transmit_queue_token-bucket_counter_tqxtbc_q1"
+          offset: "0x710"
+        - name: "transmit_queue_token_bucket_configuration_tqxtbc_q1"
+          offset: "0x714"
+        - name: "transmit_queue_arbiter_configuration_tqxac_q1"
+          offset: "0x718"
+        - name: "transmit_queue_token-bucket_counter_tqxtbc_q2"
+          offset: "0x720"
+        - name: "transmit_queue_token_bucket_configuration_tqxtbc_q2"
+          offset: "0x724"
+        - name: "transmit_queue_arbiter_configuration_tqxac_q2"
+          offset: "0x728"
+        - name: "transmit_queue_token-bucket_counter_tqxtbc_q3"
+          offset: "0x730"
+        - name: "transmit_queue_token_bucket_configuration_tqxtbc_q3"
+          offset: "0x734"
+        - name: "transmit_queue_arbiter_configuration_tqxac_q3"
+          offset: "0x738"
+        - name: "transmit_queue_token-bucket_counter_tqxtbc_q4"
+          offset: "0x740"
+        - name: "transmit_queue_token_bucket_configuration_tqxtbc_q4"
+          offset: "0x744"
+        - name: "transmit_queue_arbiter_configuration_tqxac_q4"
+          offset: "0x748"
+        - name: "transmit_queue_token-bucket_counter_tqxtbc_q5"
+          offset: "0x750"
+        - name: "transmit_queue_token_bucket_configuration_tqxtbc_q5"
+          offset: "0x754"
+        - name: "transmit_queue_arbiter_configuration_tqxac_q5"
+          offset: "0x758"
+        - name: "transmit_queue_token-bucket_counter_tqxtbc_q6"
+          offset: "0x760"
+        - name: "transmit_queue_token_bucket_configuration_tqxtbc_q6"
+          offset: "0x764"
+        - name: "transmit_queue_arbiter_configuration_tqxac_q6"
+          offset: "0x768"
+        - name: "transmit_queue_token-bucket_counter_tqxtbc_q7"
+          offset: "0x770"
+        - name: "transmit_queue_token_bucket_configuration_tqxtbc_q7"
+          offset: "0x774"
+        - name: "transmit_queue_arbiter_configuration_tqxac_q7"
+          offset: "0x778"
+        - name: "mac_mib_countersnterrupt_cause_register"
+          offset: "0x1000"
+          size: "32"
+        - name: "destination_address_filter_special_multicast_table_dfsmt"
+          offset: "0x1400"
+          size: "64"
+        - name: "destination_address_filter_other_multicast_table_dfut"
+          offset: "0x1500"
+          size: "64"
+        - name: "destination_address_filter_unicast_table_dfut"
+          offset: "0x1600"
+          size: "64"
     interrupt_controller:
       ic_name: "mv88f5181L_ic"
       ic_mmio_base: "0xf1020200"
