--- a/generation/machines/wrt350n_v2.yaml
+++ b/generation/machines/wrt350n_v2.yaml
@@ -218,7 +218,56 @@ machine:
       uart:
         uart_name: "mv88f5181L_uart"
         uart_mmio_base: "0xf1012000"
-        uart_mmio_size: "0x100"
+        uart_mmio_size: "0x200"
+        uart_registers:
+          - name: "uart_0_receive_buffer_register_rbr"
+            offset: "0x000"
+          # - name: "uart_0_transmit_holding_register_thr"
+          # offset: "0x00"
+          # - name: "uart_0_divisor_latch_low_dll_register"
+          # offset: "0x00"
+          - name: "uart_0_interrupt_enable_register_ier"
+            offset: "0x004"
+          # - name: "uart_0_divisor_latch_high_dlh_register"
+          # offset: "0x04"
+          - name: "uart_0_interrupt_identity_register_iir"
+            offset: "0x008"
+          # - name: "uart_0_fifo_control_register_fcr"
+          # offset: "0x08"
+          - name: "uart_0_line_control_register_lcr"
+            offset: "0x00c"
+          - name: "uart_0_modem_control_register_mcr"
+            offset: "0x010"
+          - name: "uart_0_line_status_register_lsr"
+            offset: "0x014"
+          - name: "uart_0_modem_status_register_msr"
+            offset: "0x018"
+          - name: "uart_0_scratch_pad_register_scr"
+            offset: "0x01c"
+          - name: "uart_1_receive_buffer_register_rbr"
+            offset: "0x100"
+          # - name: "uart_1_transmit_holding_register_thr"
+          # offset: "0x100"
+          # - name: "uart_1_divisor_latch_low_dll_register"
+          # offset: "0x100"
+          - name: "uart_1_interrupt_enable_register_ier"
+            offset: "0x104"
+          # - name: "uart_1_divisor_latch_high_dlh_register"
+          # offset: "0x104"
+          - name: "uart_1_interrupt_identity_register_iir"
+            offset: "0x108"
+          # - name: "uart_1_fifo_control_register_fcr"
+          # offset: "0x108"
+          - name: "uart_1_line_control_register_lcr"
+            offset: "0x10c"
+          - name: "uart_1_modem_control_register_mcr"
+            offset: "0x110"
+          - name: "uart_1_line_status_register_lsr"
+            offset: "0x114"
+          - name: "uart_1_modem_status_register_msr"
+            offset: "0x118"
+          - name: "uart_1_scratch_pad_register_scr"
+            offset: "0x11c"
       gpio:
         gpio_name: "mv88f5181L_gpio"
         gpio_mmio_base: "0xf1010100"
