--- a/generation/machines/wrt350n_v2.yaml
+++ b/generation/machines/wrt350n_v2.yaml
@@ -178,6 +178,21 @@ machine:
         - name: "ddr_sdram_mmask_register"
           offset: "0xB0"
           value: "0x0 << 0 | 0x0 << 2 | 0x0 << 4 | 0xF << 5 | 0x0 << 9"
+    pins_multiplexing_interface:
+      mpp_mmio_name: "﻿mv88f5181l_pins_multiplexing_interface"
+      mpp_mmio_base: "0xf1010000"
+      mpp_mmio_size: "0x100"
+      mpp_registers:
+        - name: "mpp_control_0_register"
+          offset: "0x00"
+        - name: "mpp_control_1_register"
+          offset: "0x04"
+        - name: "mpp_control_2_register"
+          offset: "0x50"
+        - name: "device_multiplex_control_register"
+          offset: "0x08"
+        - name: "sample_at_reset_register"
+          offset: "0x10"
     peripheral:
       peripheral_name: "mv88f5181L_peripherals"
       bridge_mmio_name: "mv88f5181_bridge"
