--- a/generation/machines/wrt350n_v2.yaml
+++ b/generation/machines/wrt350n_v2.yaml
@@ -179,7 +179,7 @@ machine:
           offset: "0xB0"
           value: "0x0 << 0 | 0x0 << 2 | 0x0 << 4 | 0xF << 5 | 0x0 << 9"
     pins_multiplexing_interface:
-      mpp_mmio_name: "﻿mv88f5181l_pins_multiplexing_interface"
+      mpp_mmio_name: "mv88f5181l_pins_multiplexing_interface"
       mpp_mmio_base: "0xf1010000"
       mpp_mmio_size: "0x100"
       mpp_registers:
