add pice register info to machine config file

--- a/generation/machines/wrt350n_v2.yaml
+++ b/generation/machines/wrt350n_v2.yaml
@@ -193,6 +193,224 @@ machine:
           offset: "0x08"
         - name: "sample_at_reset_register"
           offset: "0x10"
+    pcie_interface:
+      pcie_mmio_name: "mv88f5181l_pcie_interface"
+      pcie_mmio_base: "0xf1040000"
+      pcie_mmio_size: "0x2000"
+      pcie_registers:
+        - name: "pci_express_device_and_vendor_id_register"
+          offset: "0x0000"
+          value: "0x11AB << 0 | 0x5181 << 16"
+        - name: "pci_express_command_and_status_register"
+          offset: "0x0004"
+          value: "0x0"
+        - name: "pci_express_class_code_and_revision_id_register"
+          offset: "0x0008"
+          value: "0x3"
+        - name: "pci_express_bist,_header_type_and_cache_line_size_register"
+          offset: "0x000c"
+          value: "0x0"
+        - name: "pci_express_bar0_internal_register"
+          offset: "0x0010"
+          value: "0x0"
+        - name: "pci_express_bar0_internal_high_register"
+          offset: "0x0014"
+          value: "0x0"
+        - name: "pci_express_bar1_register"
+          offset: "0x0018"
+          value: "0x0"
+        - name: "pci_express_bar1_high_register"
+          offset: "0x001c"
+          value: "0x0"
+        - name: "pci_express_bar2_register"
+          offset: "0x0020"
+          value: "0x0"
+        - name: "pci_express_bar2_high_register"
+          offset: "0x0024"
+          value: "0x0"
+        - name: "pci_express_subsystem_device_and_vendor_id"
+          offset: "0x002c"
+          value: "0x0"
+        - name: "pci_express_expansion_rom_bar_register"
+          offset: "0x0030"
+          value: "0x0"
+        - name: "pci_express_capability_list_pointer_register"
+          offset: "0x0034"
+          value: "0x0"
+        - name: "pci_express_interrupt_pin_and_line_register"
+          offset: "0x003c"
+          value: "0x0"
+        - name: "pci_express_power_management_capability_header_register"
+          offset: "0x0040"
+          value: "0x0"
+        - name: "pci_express_power_management_control_and_status_register"
+          offset: "0x0044"
+          value: "0x0"
+        - name: "pci_express_msi_message_control_register"
+          offset: "0x0050"
+          value: "0x0"
+        - name: "pci_express_msi_message_address_register"
+          offset: "0x0054"
+          value: "0x0"
+        - name: "pci_express_msi_message_address_high_register"
+          offset: "0x0058"
+          value: "0x0"
+        - name: "pci_express_msi_message_data_register"
+          offset: "0x005c"
+          value: "0x0"
+        - name: "pci_express_capability_register"
+          offset: "0x0060"
+          value: "0x0"
+        - name: "pci_express_device_capabilities_register"
+          offset: "0x0064"
+          value: "0x0"
+        - name: "pci_express_device_control_status_register"
+          offset: "0x0068"
+          value: "0x0"
+        - name: "pci_express_link_capabilities_register"
+          offset: "0x006c"
+          value: "0x0"
+        - name: "pci_express_link_control_status_register"
+          offset: "0x0070"
+          value: "0x0"
+        - name: "pci_express_advanced_error_report_header_register"
+          offset: "0x0100"
+          value: "0x0"
+        - name: "pci_express_uncorrectable_error_status_register"
+          offset: "0x0104"
+          value: "0x0"
+        - name: "pci_express_uncorrectable_error_mask_register"
+          offset: "0x0108"
+          value: "0x0"
+        - name: "pci_express_uncorrectable_error_severity_register"
+          offset: "0x010c"
+          value: "0x0"
+        - name: "pci_express_correctable_error_status_register"
+          offset: "0x0110"
+          value: "0x0"
+        - name: "pci_express_correctable_error_mask_register"
+          offset: "0x0114"
+          value: "0x0"
+        - name: "pci_express_advanced_error_capability_and_control_register"
+          offset: "0x0118"
+          value: "0x0"
+        - name: "pci_express_header_log_first_dword_register"
+          offset: "0x011c"
+          value: "0x0"
+        - name: "pci_express_header_log_second_dword_register"
+          offset: "0x0120"
+          value: "0x0"
+        - name: "pci_express_header_log_third_dword_register"
+          offset: "0x0124"
+          value: "0x0"
+        - name: "pci_express_header_log_fourth_dword_register"
+          offset: "0x0128"
+          value: "0x0"
+        - name: "pci_express_bar1_control_register"
+          offset: "0x1804"
+          value: "0x0"
+        - name: "pci_express_bar2_control_register"
+          offset: "0x1808"
+          value: "0x0"
+        - name: "pci_express_expansion_rom_bar_control_register"
+          offset: "0x180c"
+          value: "0x0"
+        - name: "pci_express_configuration_address_register"
+          offset: "0x18f8"
+          value: "0x0"
+        - name: "pci_express_configuration_data_register"
+          offset: "0x18fc"
+          value: "0x0"
+        - name: "pci_express_interrupt_cause"
+          offset: "0x1900"
+          value: "0x0"
+        - name: "pci_express_interrupt_mask"
+          offset: "0x1910"
+          value: "0x0"
+        - name: "pci_express_window0_control_register"
+          offset: "0x1820"
+          value: "0x0"
+        - name: "pci_express_window0_base_register"
+          offset: "0x1824"
+          value: "0x0"
+        - name: "pci_express_window0_remap_register"
+          offset: "0x182c"
+          value: "0x0"
+        - name: "pci_express_window1_control_register"
+          offset: "0x1830"
+          value: "0x0"
+        - name: "pci_express_window1_base_register"
+          offset: "0x1834"
+          value: "0x0"
+        - name: "pci_express_window1_remap_register"
+          offset: "0x183c"
+          value: "0x0"
+        - name: "pci_express_window2_control_register"
+          offset: "0x1840"
+          value: "0x0"
+        - name: "pci_express_window2_base_register"
+          offset: "0x1844"
+          value: "0x0"
+        - name: "pci_express_window2_remap_register"
+          offset: "0x184c"
+          value: "0x0"
+        - name: "pci_express_window3_control_register"
+          offset: "0x1850"
+          value: "0x0"
+        - name: "pci_express_window3_base_register"
+          offset: "0x1854"
+          value: "0x0"
+        - name: "pci_express_window3_remap_register"
+          offset: "0x185c"
+          value: "0x0"
+        - name: "pci_express_window4_control_register"
+          offset: "0x1860"
+          value: "0x0"
+        - name: "pci_express_window4_base_register"
+          offset: "0x1864"
+          value: "0x0"
+        - name: "pci_express_window4_remap_register"
+          offset: "0x186c"
+          value: "0x0"
+        - name: "pci_express_window5_control_register"
+          offset: "0x1880"
+          value: "0x0"
+        - name: "pci_express_window5_base_register"
+          offset: "0x1884"
+          value: "0x0"
+        - name: "pci_express_window5_remap_register"
+          offset: "0x188c"
+          value: "0x0"
+        - name: "pci_express_default_window_control_register"
+          offset: "0x18b0"
+          value: "0x0"
+        - name: "pci_express_expansion_rom_window_control_register"
+          offset: "0x18c0"
+          value: "0x0"
+        - name: "pci_express_expansion_rom_window_remap_register"
+          offset: "0x18c4"
+          value: "0x0"
+        - name: "pci_express_control_register"
+          offset: "0x1a00"
+          value: "0x0"
+        - name: "pci_express_status_register"
+          offset: "0x1a04"
+          value: "0x0"
+        - name: "pci_express_completion_timeout_register"
+          offset: "0x1a10"
+          value: "0x0"
+        - name: "pci_express_flow_control_register"
+          offset: "0x1a20"
+          value: "0x0"
+        - name: "pci_express_acknowledge_timers_1x_register"
+          offset: "0x1a40"
+          value: "0x0"
+        - name: "pci_express_debug_control_register"
+          offset: "0x1a60"
+          value: "0x0"
+        - name: "pci_express_tl_control_register"
+          offset: "0x1ab0"
+          value: "0x0"
     peripheral:
       peripheral_name: "mv88f5181L_peripherals"
       bridge_mmio_name: "mv88f5181_bridge"
