add pci and move pci/pcie to soc

--- a/generation/machines/wrt350n_v2.yaml
+++ b/generation/machines/wrt350n_v2.yaml
@@ -193,7 +193,200 @@ machine:
           offset: "0x08"
         - name: "sample_at_reset_register"
           offset: "0x10"
+    pci_interface:
+      pci_name: "mv88f5181l_pci_interface"
+      pci_mmio_name: "mv88f5181l_pci_interface"
+      pci_mmio_base: "0xf1030000"
+      pci_mmio_size: "0x2000"
+      pci_registers:
+        - name: "csn0_bar_size"
+          offset: "0x0c08"
+          value: "0x0"
+        - name: "csn1_bar_size"
+          offset: "0x0d08"
+          value: "0x0"
+        - name: "csn2_bar_size"
+          offset: "0x0c0c"
+          value: "0x0"
+        - name: "csn3_bar_size"
+          offset: "0x0d0c"
+          value: "0x0"
+        - name: "devcsn0_bar_size"
+          offset: "0x0c10"
+          value: "0x0"
+        - name: "devcsn1_bar_size"
+          offset: "0x0d10"
+          value: "0x0"
+        - name: "devcsn2_bar_size"
+          offset: "0x0d18"
+          value: "0x0"
+        - name: "boot_csn_bar_size"
+          offset: "0x0d14"
+          value: "0x0"
+        - name: "p2p_mem0_bar_size"
+          offset: "0x0d1c"
+          value: "0x0"
+        - name: "p2p_i_or_o_bar_size"
+          offset: "0x0d24"
+          value: "0x0"
+        - name: "expansion_rom_bar_size"
+          offset: "0x0d2c"
+          value: "0x0"
+        - name: "base_address_registers_enable"
+          offset: "0x0c3c"
+          value: "0x0"
+        - name: "csn0_base_address_remap"
+          offset: "0x0c48"
+          value: "0x0"
+        - name: "csn1_base_address_remap"
+          offset: "0x0d48"
+          value: "0x0"
+        - name: "csn2_base_address_remap"
+          offset: "0x0c4c"
+          value: "0x0"
+        - name: "csn3_base_address_remap"
+          offset: "0x0d4c"
+          value: "0x0"
+        - name: "devcsn0_base_address_remap"
+          offset: "0x0c50"
+          value: "0x0"
+        - name: "devcsn1_base_address_remap"
+          offset: "0x0d50"
+          value: "0x0"
+        - name: "devcsn2_base_address_remap"
+          offset: "0x0d58"
+          value: "0x0"
+        - name: "bootcsn_base_address_remap"
+          offset: "0x0d54"
+          value: "0x0"
+        - name: "p2p_mem0_base_address_remap_low"
+          offset: "0x0d5c"
+          value: "0x0"
+        - name: "p2p_mem0_base_address_remap_high"
+          offset: "0x0d60"
+          value: "0x0"
+        - name: "p2p_i_or_o_base_address_remap"
+          offset: "0x0d6c"
+          value: "0x0"
+        - name: "expansion_rom_base_address_remap"
+          offset: "0x0f38"
+          value: "0x0"
+        - name: "dram_bar_bank_select"
+          offset: "0x0c1c"
+          value: "0x0"
+        - name: "pci_address_decode_control"
+          offset: "0x0d3c"
+          value: "0x0"
+        - name: "pci_dll_control"
+          offset: "0x1d20"
+          value: "0x0"
+        - name: "pci_or_mpp_pads_calibration"
+          offset: "0x1d1c"
+          value: "0x0"
+        - name: "pci_command"
+          offset: "0x0c00"
+          value: "0x0"
+        - name: "pci_mode"
+          offset: "0x0d00"
+          value: "0x0"
+        - name: "pci_retry"
+          offset: "0x0c04"
+          value: "0x0"
+        - name: "pci_discard_timer"
+          offset: "0x0d04"
+          value: "0x0"
+        - name: "msi_trigger_timer"
+          offset: "0x0c38"
+          value: "0x0"
+        - name: "pci_arbiter_control"
+          offset: "0x1d00"
+          value: "0x0"
+        - name: "pci_p2p_configuration"
+          offset: "0x1d14"
+          value: "0x0"
+        - name: "pci_access_control_base_0_low"
+          offset: "0x1e00"
+          value: "0x0"
+        - name: "pci_access_control_base_0_high"
+          offset: "0x1e04"
+          value: "0x0"
+        - name: "pci_access_control_size_0"
+          offset: "0x1e08"
+          value: "0x0"
+        - name: "pci_access_control_base_1_low"
+          offset: "0x1e10"
+          value: "0x0"
+        - name: "pci_access_control_base_1_high"
+          offset: "0x1e14"
+          value: "0x0"
+        - name: "pci_access_control_size_1"
+          offset: "0x1e18"
+          value: "0x0"
+        - name: "pci_access_control_base_2_low"
+          offset: "0x1e20"
+          value: "0x0"
+        - name: "pci_access_control_base_2_high"
+          offset: "0x1e24"
+          value: "0x0"
+        - name: "pci_access_control_size_2"
+          offset: "0x1e28"
+          value: "0x0"
+        - name: "pci_access_control_base_3_low"
+          offset: "0x1e30"
+          value: "0x0"
+        - name: "pci_access_control_base_3_high"
+          offset: "0x1e34"
+          value: "0x0"
+        - name: "pci_access_control_size_3"
+          offset: "0x1e38"
+          value: "0x0"
+        - name: "pci_access_control_base_4_low"
+          offset: "0x1e40"
+          value: "0x0"
+        - name: "pci_access_control_base_4_high"
+          offset: "0x1e44"
+          value: "0x0"
+        - name: "pci_access_control_size_4"
+          offset: "0x1e48"
+          value: "0x0"
+        - name: "pci_access_control_base_5_low"
+          offset: "0x1e50"
+          value: "0x0"
+        - name: "pci_access_control_base_5_high"
+          offset: "0x1e54"
+          value: "0x0"
+        - name: "pci_access_control_size_5"
+          offset: "0x1e58"
+          value: "0x0"
+        - name: "pci_configuration_address"
+          offset: "0x0c78"
+          value: "0x0"
+        - name: "pci_configuration_data"
+          offset: "0x0c7c"
+          value: "0x0"
+        - name: "pci_interrupt_acknowledge"
+          offset: "0x0c34"
+          value: "0x0"
+        - name: "pci_serrn_mask"
+          offset: "0x0c28"
+          value: "0x0"
+        - name: "pci_interrupt_cause"
+          offset: "0x1d58"
+          value: "0x0"
+        - name: "pci_interrupt_mask"
+          offset: "0x1d5c"
+          value: "0x0"
+        - name: "pci_error_address_low"
+          offset: "0x1d40"
+          value: "0x0"
+        - name: "pci_error_address_high"
+          offset: "0x1d44"
+          value: "0x0"
+        - name: "pci_error_command"
+          offset: "0x1d50"
+          value: "0x0"
     pcie_interface:
+      pcie_name: "mv88f5181L_pcie_interface"
       pcie_mmio_name: "mv88f5181l_pcie_interface"
       pcie_mmio_base: "0xf1040000"
       pcie_mmio_size: "0x2000"
@@ -532,10 +725,6 @@ machine:
             value: "0x0 << 0 | 0x0 << 26"
         gpio_in_out_n: 26
         gpio_irq_n: 4
-      pcie:
-        pcie_name: "mv88f5181L_pcie"
-        pcie_mmio_base: "0xf1040000"
-        pcie_mmio_size: "0x10000"
       cryptographic_engine_and_security_accelerator:
         cesa_name: "mv88f5181l_cesa"
         cesa_mmio_base: "0xf109DD00"
@@ -567,23 +756,23 @@ machine:
             offset: "0x00000064"
           - name: "des_command_register"
             offset: "0x00000058"
-          - name: "sha-1_or_md5_data_in_register"
+          - name: "sha_1_or_md5_data_in_register"
             offset: "0x00000038"
-          - name: "sha-1_or_md5_bit_count_low_register"
+          - name: "sha_1_or_md5_bit_count_low_register"
             offset: "0x00000020"
-          - name: "sha-1_or_md5_bit_count_high_register"
+          - name: "sha_1_or_md5_bit_count_high_register"
             offset: "0x00000024"
-          - name: "sha-1_or_md5_initial_value_or_digest_a_register"
+          - name: "sha_1_or_md5_initial_value_or_digest_a_register"
             offset: "0x00000000"
-          - name: "sha-1_or_md5_initial_value_or_digest_b_register"
+          - name: "sha_1_or_md5_initial_value_or_digest_b_register"
             offset: "0x00000004"
-          - name: "sha-1_or_md5_initial_value_or_digest_c_register"
+          - name: "sha_1_or_md5_initial_value_or_digest_c_register"
             offset: "0x00000008"
-          - name: "sha-1_or_md5_initial_value_or_digest_d_register"
+          - name: "sha_1_or_md5_initial_value_or_digest_d_register"
             offset: "0x0000000c"
-          - name: "sha-1_initial_value_or_digest_e_register"
+          - name: "sha_1_initial_value_or_digest_e_register"
             offset: "0x00000010"
-          - name: "sha-1_or_md5_authentication_command_register"
+          - name: "sha_1_or_md5_authentication_command_register"
             offset: "0x00000018"
           - name: "aes_encryption_data_in_or_out_column_3_register"
             offset: "0x000000a0"
