--- a/generation/machines/wrt350n_v2.yaml
+++ b/generation/machines/wrt350n_v2.yaml
@@ -114,10 +114,10 @@ machine:
           value: "0x1 << 0 | 0x0 << 1 | 0xFF << 16 | 0x0F << 24"
         - name: "ddr_sdram_configuration_register"
           offset: "0x00"
-          value: "0x400 << 0 | 0x2 << 14 | 0x1 << 18 | 0x2 << 20 | 0x1 << 24 | 0x1 << 25 // 0 14 17 18 19 20 22 24 25 26"
+          value: "0x400 << 0 | 0x2 << 14 | 0x1 << 18 | 0x2 << 20 | 0x1 << 24 | 0x1 << 25 /* 0 14 17 18 19 20 22 24 25 26 */"
         - name: "ddr_sdram_control_register"
           offset: "0x04"
-          value: "0x1 << 6 | 0x1 << 12 | 0x1 << 18 | 0x3 << 24 // 0 6 7 12 13 14 18 19 24 28"
+          value: "0x1 << 6 | 0x1 << 12 | 0x1 << 18 | 0x3 << 24 /* 0 6 7 12 13 14 18 19 24 28 */"
         - name: "ddr_sdram_timing_low_register"
           offset: "0x08"
           value: "0x0 << 0 | 0x2 << 4 | 0x2 << 8 | 0x2 << 12 | 0x1 << 16 | 0x8 << 20 | 0x1 << 24 | 0x1 << 28"
@@ -234,10 +234,10 @@ machine:
           value: "0x0 << 0"
         - name: "base_address_registers_enable"
           offset: "0x0c3c"
-          value: "0x1 << 4 | 0x1 << 5 | 0x1 << 7 | 0x1 << 10 | 0x1 << 11 | 0x1 << 12 | 0x1 << 13 // 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 16"
+          value: "0x1 << 4 | 0x1 << 5 | 0x1 << 7 | 0x1 << 10 | 0x1 << 11 | 0x1 << 12 | 0x1 << 13 /* 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 16 */"
         - name: "csn0_base_address_remap"
           offset: "0x0c48"
-          value: "0x0 // 0 12"
+          value: "0x0 /* 0 12 */"
         - name: "csn1_base_address_remap"
           offset: "0x0d48"
           value: "0x10000000 << 0"
@@ -276,44 +276,44 @@ machine:
           value: "0x0 << 0 | 0x1 << 2 | 0x2 << 4 | 0x3 << 6 | 0x0 << 8"
         - name: "pci_address_decode_control"
           offset: "0x0d3c"
-          value: "0x1 << 3 // 0 1 3 4 8 25"
+          value: "0x1 << 3 /* 0 1 3 4 8 25 */"
         - name: "pci_dll_control"
           offset: "0x1d20"
-          value: "0x1 << 1 | 0x1 << 20 // 0 1 3 5 9 13 15 16 17 20 22 31"
+          value: "0x1 << 1 | 0x1 << 20 / 0 1 3 5 9 13 15 16 17 20 22 31 */"
         - name: "pci_or_mpp_pads_calibration"
           offset: "0x1d1c"
           value: "0xF << 0 | 0xF << 4 | 0xF << 8 | 0xF << 12 | 0x1 << 16 | 0x1 << 17 | 0x0 << 18 | 0x0 << 22 | 0x0 << 31"
         - name: "pci_command"
           offset: "0x0c00"
           value: "0x1 << 0 | 0x1 << 4 |  0x1 << 5 | 0x1 << 6 | 0x1 << 8 | 0x1 << 9 | 0x1 << 13 | 0x1 << 14 | 0x1 << 16 | 0x1 << 17 | 0x1 << 24
-          // 0 1 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 24 26 28 29"
+          /* 0 1 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 24 26 28 29 */"
         - name: "pci_mode"
           offset: "0x0d00"
-          value: "0x1 << 31 // 0 2 3 4 6 8 9 31"
+          value: "0x1 << 31 /* 0 2 3 4 6 8 9 31 */"
         - name: "pci_retry"
           offset: "0x0c04"
-          value: "0x0 // 0 16 24"
+          value: "0x0 /* 0 16 24 */"
         - name: "pci_discard_timer"
           offset: "0x0d04"
-          value: "0x0 // 0 16"
+          value: "0x0 /* 0 16 */"
         - name: "msi_trigger_timer"
           offset: "0x0c38"
           value: "0xFFFF << 0 | 0x0 << 16"
         - name: "pci_arbiter_control"
           offset: "0x1d00"
-          value: "0x6 << 3 // 0 1 2 3 7 14 21 31"
+          value: "0x6 << 3 /* 0 1 2 3 7 14 21 31 */"
         - name: "pci_p2p_configuration"
           offset: "0x1d14"
           value: "0xFF << 0 | 0x0 << 16 | 0x0 << 24 | 0x0 << 29"
         - name: "pci_access_control_base_0_low"
           offset: "0x1e00"
-          value: "0x0 // 0 1 4 5 6 8 10 12"
+          value: "0x0 /* 0 1 4 5 6 8 10 12 */"
         - name: "pci_access_control_base_0_high"
           offset: "0x1e04"
           value: "0x0 << 0"
         - name: "pci_access_control_size_0"
           offset: "0x1e08"
-          value: "0x0 // 0 4 5 8 19 11 12"
+          value: "0x0 /* 0 4 5 8 19 11 12 */"
         - name: "pci_access_control_base_1_low"
           offset: "0x1e10"
           value: "0x0 << 0"
@@ -361,7 +361,7 @@ machine:
           value: "0x0 << 0"
         - name: "pci_configuration_address"
           offset: "0x0c78"
-          value: "0x0 // 0 2 8 11 16 24 31"
+          value: "0x0 /* 0 2 8 11 16 24 31 */"
         - name: "pci_configuration_data"
           offset: "0x0c7c"
           value: "0x0 << 0"
@@ -370,13 +370,13 @@ machine:
           value: "0x0 << 0"
         - name: "pci_serrn_mask"
           offset: "0x0c28"
-          value: "0x0 // 0 1 2 3 5 6 7 8 9 10 11 12 17 18 20 21 22"
+          value: "0x0 /* 0 1 2 3 5 6 7 8 9 10 11 12 17 18 20 21 22 */"
         - name: "pci_interrupt_cause"
           offset: "0x1d58"
-          value: "0x0 // 0 24 25 26 27"
+          value: "0x0 /* 0 24 25 26 27 *"
         - name: "pci_interrupt_mask"
           offset: "0x1d5c"
-          value: "0x0 // 0 27"
+          value: "0x0 /* 0 27 */"
         - name: "pci_error_address_low"
           offset: "0x1d40"
           value: "0x0 << 0"
@@ -385,7 +385,7 @@ machine:
           value: "0x0 << 0"
         - name: "pci_error_command"
           offset: "0x1d50"
-          value: "0x0 // 0 4 5"
+          value: "0x0 /* 0 4 5 */"
     pcie_interface:
       pcie_name: "mv88f5181L_pcie_interface"
       pcie_mmio_name: "mv88f5181l_pcie_interface"
@@ -397,13 +397,13 @@ machine:
           value: "0x11AB << 0 | 0x5181 << 16"
         - name: "pci_express_command_and_status_register"
           offset: "0x0004"
-          value: "0x1 << 20 // 0 1 2 3 6 7 8 9 10 11 19 20 21 24 25 27 29 30 31"
+          value: "0x1 << 20 /* 0 1 2 3 6 7 8 9 10 11 19 20 21 24 25 27 29 30 31 */"
         - name: "pci_express_class_code_and_revision_id_register"
           offset: "0x0008"
           value: "0x3 << 0 | 0x80 << 16 | 0x05 << 24"
         - name: "pci_express_bist_header_type_and_cache_line_size_register"
           offset: "0x000c"
-          value: "0x0 // 0 8 16 24 28 30 31"
+          value: "0x0 /* 0 8 16 24 28 30 31 */"
         - name: "pci_express_bar0_internal_register"
           offset: "0x0010"
           value: "0x0 << 0 | 0x2 << 1 | 0x1 << 3 | 0x0 << 4 | 0xD00 << 20"
@@ -427,7 +427,7 @@ machine:
           value: "0x11AB << 0 | 0x11AB << 16"
         - name: "pci_express_expansion_rom_bar_register"
           offset: "0x0030"
-          value: "0x0 // 0 1 19 22"
+          value: "0x0 /* 0 1 19 22 */"
         - name: "pci_express_capability_list_pointer_register"
           offset: "0x0034"
           value: "0x40 << 0 | 0x0 << 8"
@@ -436,13 +436,13 @@ machine:
           value: "0x0 << 0 | 0x1 << 8 | 0x0 << 16"
         - name: "pci_express_power_management_capability_header_register"
           offset: "0x0040"
-          value: "0x01 << 0 | 0x50 << 8 | 0x2 << 16 // 0 8 16 19 21 22 25 26 27"
+          value: "0x01 << 0 | 0x50 << 8 | 0x2 << 16 /* 0 8 16 19 21 22 25 26 27 */"
         - name: "pci_express_power_management_control_and_status_register"
           offset: "0x0044"
-          value: "0x0 // 0 2 8 9 13 15 16 24"
+          value: "0x0 /* 0 2 8 9 13 15 16 24 */"
         - name: "pci_express_msi_message_control_register"
           offset: "0x0050"
-          value: "0x5 << 0 | 0x60 << 8 | 0x1 << 23 // 0 8 16 17 20 23 24"
+          value: "0x5 << 0 | 0x60 << 8 | 0x1 << 23 /* 0 8 16 17 20 23 24 */"
         - name: "pci_express_msi_message_address_register"
           offset: "0x0054"
           value: "0x0 << 0 | 0x0 << 2"
@@ -454,25 +454,25 @@ machine:
           value: "0x0 << 0 | 0x0 << 16"
         - name: "pci_express_capability_register"
           offset: "0x0060"
-          value: "0x10 << 0 | 0x1 << 16 // 0 8 16 20 24 25 30"
+          value: "0x10 << 0 | 0x1 << 16 /* 0 8 16 20 24 25 30 */"
         - name: "pci_express_device_capabilities_register"
           offset: "0x0064"
-          value: "0x2 << 6 // 0 3 6 9 12 13 14 15 18 26 28"
+          value: "0x2 << 6 /* 0 3 6 9 12 13 14 15 18 26 28 */"
         - name: "pci_express_device_control_status_register"
           offset: "0x0068"
-          value: "0x2 << 12 // 0 1 2 3 4 5 8 10 11 12 15 16 17 18 19 20 21 22"
+          value: "0x2 << 12 /* 0 1 2 3 4 5 8 10 11 12 15 16 17 18 19 20 21 22 */"
         - name: "pci_express_link_capabilities_register"
           offset: "0x006c"
           value: "0x1 << 0 | 0x0 << 4 | 0x1 << 10 | 0x0 << 12 | 0x7 << 15 | 0x0 << 18 | 0x0 << 24"
         - name: "pci_express_link_control_status_register"
           offset: "0x0070"
-          value: "0x1 << 3 | 0x1 << 16 | 0x1 << 28 // 0 2 3 4 5 6 7 8 16 20 26 27 28 29"
+          value: "0x1 << 3 | 0x1 << 16 | 0x1 << 28 /* 0 2 3 4 5 6 7 8 16 20 26 27 28 29 */"
         - name: "pci_express_advanced_error_report_header_register"
           offset: "0x0100"
           value: "0x1 << 0 | 0x1 << 16 | 0x0 << 20"
         - name: "pci_express_uncorrectable_error_status_register"
           offset: "0x0104"
-          value: "0x0 // 0 4 5 12 13 14 15 16 17 18 19 20 21"
+          value: "0x0 /* 0 4 5 12 13 14 15 16 17 18 19 20 21 */"
         - name: "pci_express_uncorrectable_error_mask_register"
           offset: "0x0108"
           value: "0x0 << 0"
@@ -481,7 +481,7 @@ machine:
           value: "0x60010 << 0"
         - name: "pci_express_correctable_error_status_register"
           offset: "0x0110"
-          value: "0x0 // 0 1 6 7 8 9 12 13"
+          value: "0x0 /* 0 1 6 7 8 9 12 13 */"
         - name: "pci_express_correctable_error_mask_register"
           offset: "0x0114"
           value: "0x0 << 0"
@@ -517,7 +517,7 @@ machine:
           value: "0x0 << 0"
         - name: "pci_express_interrupt_cause"
           offset: "0x1900"
-          value: "0x0 << 0 // 0 1 2 3 4 5 8 9 10 11 12 13 16 17 18 19 20 21 22 23 24 25 26 27 28"
+          value: "0x0 << 0 /* 0 1 2 3 4 5 8 9 10 11 12 13 16 17 18 19 20 21 22 23 24 25 26 27 28 */"
         - name: "pci_express_interrupt_mask"
           offset: "0x1910"
           value: "0x0 << 0"
@@ -586,10 +586,10 @@ machine:
           value: "0x0 << 0 | 0x0 << 1 | 0x0 << 16"
         - name: "pci_express_control_register"
           offset: "0x1a00"
-          value: "0x1 << 0 | 0x1 << 3 | 0x3 << 8 | 0x14 << 16 // 0 1 2 3 8 19 16 24 25 26 27 28 29"
+          value: "0x1 << 0 | 0x1 << 3 | 0x3 << 8 | 0x14 << 16 /* 0 1 2 3 8 19 16 24 25 26 27 28 29 */"
         - name: "pci_express_status_register"
           offset: "0x1a04"
-          value: "0x0 // 0 1 5 8 16 21 24 25 26 27 28"
+          value: "0x0 /* 0 1 5 8 16 21 24 25 26 27 28 */"
         - name: "pci_express_completion_timeout_register"
           offset: "0x1a10"
           value: "0x2710 << 0 | 0x0 << 16"
