--- a/generation/machines/wrt350n_v2.yaml
+++ b/generation/machines/wrt350n_v2.yaml
@@ -279,7 +279,7 @@ machine:
           value: "0x1 << 3 /* 0 1 3 4 8 25 */"
         - name: "pci_dll_control"
           offset: "0x1d20"
-          value: "0x1 << 1 | 0x1 << 20 / 0 1 3 5 9 13 15 16 17 20 22 31 */"
+          value: "0x1 << 1 | 0x1 << 20 /* 0 1 3 5 9 13 15 16 17 20 22 31 */"
         - name: "pci_or_mpp_pads_calibration"
           offset: "0x1d1c"
           value: "0xF << 0 | 0xF << 4 | 0xF << 8 | 0xF << 12 | 0x1 << 16 | 0x1 << 17 | 0x0 << 18 | 0x0 << 22 | 0x0 << 31"
