--- a/generation/machines/wrt350n_v2.yaml
+++ b/generation/machines/wrt350n_v2.yaml
@@ -373,7 +373,7 @@ machine:
           value: "0x0 /* 0 1 2 3 5 6 7 8 9 10 11 12 17 18 20 21 22 */"
         - name: "pci_interrupt_cause"
           offset: "0x1d58"
-          value: "0x0 /* 0 24 25 26 27 *"
+          value: "0x0 /* 0 24 25 26 27 */"
         - name: "pci_interrupt_mask"
           offset: "0x1d5c"
           value: "0x0 /* 0 27 */"
