feed uart register with init values

--- a/generation/machines/wrt350n_v2.yaml
+++ b/generation/machines/wrt350n_v2.yaml
@@ -649,52 +649,68 @@ machine:
         uart_registers:
           - name: "uart_0_receive_buffer_register_rbr"
             offset: "0x000"
+            value: "0x0 << 0 | 0x0 << 8"
           # - name: "uart_0_transmit_holding_register_thr"
           # offset: "0x00"
           # - name: "uart_0_divisor_latch_low_dll_register"
           # offset: "0x00"
           - name: "uart_0_interrupt_enable_register_ier"
             offset: "0x004"
+            value: "0x0 /* 0 1 2 3 4 */"
           # - name: "uart_0_divisor_latch_high_dlh_register"
           # offset: "0x04"
           - name: "uart_0_interrupt_identity_register_iir"
             offset: "0x008"
+            value: "0x0 /* 0 4 6 8 */"
           # - name: "uart_0_fifo_control_register_fcr"
           # offset: "0x08"
           - name: "uart_0_line_control_register_lcr"
             offset: "0x00c"
+            value: "0x0 /* 0 2 3 4 5 6 7 8 */"
           - name: "uart_0_modem_control_register_mcr"
             offset: "0x010"
+            value: "0x0 /* 0 1 2 4 5 */"
           - name: "uart_0_line_status_register_lsr"
             offset: "0x014"
+            value: "0x1 << 5 | 0x1 << 6 | 0x1 << 7 /* 0 1 2 3 4 5 6 7 8*/"
           - name: "uart_0_modem_status_register_msr"
             offset: "0x018"
+            value: "0x0 /* 0 1 4 5 */"
           - name: "uart_0_scratch_pad_register_scr"
             offset: "0x01c"
+            value: "0x0 /* 0 8 */"
           - name: "uart_1_receive_buffer_register_rbr"
             offset: "0x100"
+            value: "0x0"
           # - name: "uart_1_transmit_holding_register_thr"
           # offset: "0x100"
           # - name: "uart_1_divisor_latch_low_dll_register"
           # offset: "0x100"
           - name: "uart_1_interrupt_enable_register_ier"
             offset: "0x104"
+            value: "0x0"
           # - name: "uart_1_divisor_latch_high_dlh_register"
           # offset: "0x104"
           - name: "uart_1_interrupt_identity_register_iir"
             offset: "0x108"
+            value: "0x0"
           # - name: "uart_1_fifo_control_register_fcr"
           # offset: "0x108"
           - name: "uart_1_line_control_register_lcr"
             offset: "0x10c"
+            value: "0x0"
           - name: "uart_1_modem_control_register_mcr"
             offset: "0x110"
+            value: "0x0"
           - name: "uart_1_line_status_register_lsr"
             offset: "0x114"
+            value: "0x0"
           - name: "uart_1_modem_status_register_msr"
             offset: "0x118"
+            value: "0x0"
           - name: "uart_1_scratch_pad_register_scr"
             offset: "0x11c"
+            value: "0x0"
       gpio:
         gpio_name: "mv88f5181L_gpio"
         gpio_mmio_base: "0xf1010100"
