remove ? in register name

--- a/generation/machines/wrt350n_v2.yaml
+++ b/generation/machines/wrt350n_v2.yaml
@@ -1047,11 +1047,11 @@ machine:
           offset: "0x424"
         - name: "ip_differentiated_services_codepoint_2_to_priority_dscp2"
           offset: "0x428"
-        - name: "ip_differentiated_services_codepoint_23?_to_priority_dscp3"
+        - name: "ip_differentiated_services_codepoint_23_to_priority_dscp3"
           offset: "0x42c"
-        - name: "ip_differentiated_services_codepoint_24?_to_priority_dscp4"
+        - name: "ip_differentiated_services_codepoint_24_to_priority_dscp4"
           offset: "0x430"
-        - name: "ip_differentiated_services_codepoint_25?_to_priority_dscp5"
+        - name: "ip_differentiated_services_codepoint_25_to_priority_dscp5"
           offset: "0x434"
         - name: "ip_differentiated_services_codepoint_6_to_priority_dscp6"
           offset: "0x438"
